Changelog
=========

1.0b7 - Unreleased
------------------

1.0b6 - 2010-05-03
------------------

- Remove styling of path_bar. Breadcrumbs should now behave in a manner
  similar to that of Plone 3.
  [esteele]

1.0b5 - 2010-05-03
------------------

- Show current page in breadcrumbs, give the surrounding div the same height
  as our portal-headers for consistency.
  [esteele]

- Dtml vars removed.
  Fixes: http://dev.plone.org/plone/ticket/10492
  [pelle]

- Improved :focus which is an accessibility requirement, a level 2 priority 
  point/AA. This was removed entirely due to the reset css in use, so 
  specifying :hover then remember :focus as well.
  Fixes: http://dev.plone.org/plone/ticket/10472
  [pelle]

- Fix for global navigation colliding with portlets, bread crumb etc. 
  http://dev.plone.org/plone/ticket/10491
  [pelle]

1.0b4 - 2010-05-01
------------------

- Always enable breadcrumbs on all levels. ploneCustom contains an example on
  how to disable them on the first levels. This closes
  http://dev.plone.org/plone/ticket/9987 again.
  [elvix, hannosch]

- Added tests for "ajax_load" query string in main_template. When found, skip
  anything expensive that isn't going to show in an ajax overlay.
  The plone.app.jquerytools overlay helper sets the ajax_load query string
  to prevent browser caching.
  [smcmahon]

- Removed fixed vertical position for overlays. This needs to be computed on
  display so that overlays don't display out of the viewport on long pages.
  [smcmahon]

- Remove display:none for navigation portlet header. This is now handled
  through the template.
  [esteele]

- Improved style of blocked portlets.
  [igbun]

- Be carefull with adding ie hacks to IEFixes.css since Sunburst Theme 
  uses IE8.js.
  Fixes http://dev.plone.org/plone/ticket/10417.
  [pelle]

- Improved overlay styling e.g. for openid overlay.
  Done when stepping trough #10035 and it's tried to make as general as possible.
  [pelle]


1.0b3 - 2010-04-10